--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "mcfacts_helper"
 version = "0.1.0"
 edition = "2021"
+exclude = [
+  "python/",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -9,4 +12,8 @@ name = "mcfacts_helper"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = "0.23.3"
+numpy = "0.27.0"
+pyo3 = "0.27.1"
+rayon = "1.11.0"
+splines = "5.0.0"
+uom = "0.37.0"
