--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ exclude = [
   "python/",
   "demo/",
   "v11/",
+  "v11_output/",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
